[package]
name = "pixeval-ech"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.2",default-features = false, features = ["__rustls", "http3"] }
tokio = { version = "1.52.0", features = ["full"] }
rustls = "0.23.38"
webpki-roots = "1.0.6"
serde_json = "1.0.149"
base64 = "0.22.1"
log = "0.4.28"
anyhow = "1.0.102"

[lib]
name = "pixeval_ech"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib", "cdylib"]
